# lully

./: .gitignore  MANIFEST.in  Makefile  README.mkd  __init__.py  addwords.py  mypy.ini  pytest.ini  ruff.toml  setup.cfg
.github/workflows/: python-publish.yml
lully/: __init__.py  __main__.py  binary.py  caldav.py  collections.py  colop.py  confiseur.py  dateutils.py  debug.py  fief.py  files.py  funcmore.py  hashing.py  itermore.py  kotlin.py  logger.py  magwitch.py  more_itertools.py  passwd.py  popglob.py  printmore.py  random.py  shellmore.py  sql.py  string.py  subs.py  tal.py  texty.py  url.py  words.py  xml.py
test/: test_binary.py  test_collections.py  test_confiseur.py  test_dateutils.py  test_fief.py  test_funcmore.py  test_hashing.py  test_itermore.py  test_magwitch.py  test_more_itertools.py  test_random.py  test_subs.py  test_texty.py  test_xml.py
