[metadata]
name = lully
version = attr: lully.__version__
description = Helpers for Python
long_description = file: README.mkd
long_description_content_type = text/markdown
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/lully
license = GPLv3
keywords = helpers, lib
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = lully

[zest.releaser]
create-wheel = yes
python-file-with-version = lully/__init__.py
