[metadata]
name = lully
version = attr: lully.__version__
description = Helpers and utils
long_description = file: README.mkd
long_description_content_type = text/markdown
author = Lucas Bourneuf
author_email = lucas@bourneuf.net
url = https://github.com/aluriak/lully
license = GPLv3
keywords = utils, library, helpers
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9

[options.extras_require]
test =
    mypy>=1.16.1
    pytest>=8.4.1
    ruff>=0.12.2
all =
    flashtext>=2.7
    sqlglot>=18.16.1
    polars>=0.19.19
    requests[socks]>=2.32.3
    PyYAML>=6.0.1
    pydantic>=2.4.2

[options]
zip_safe = False
include_package_data = True
packages = lully
install_requires =
